Fix hover overlap for wide blocks.

--- a/packages/block-editor/src/components/block-list/style.scss
+++ b/packages/block-editor/src/components/block-list/style.scss
@@ -550,6 +550,11 @@
 		> .block-editor-block-list__block-edit > .block-editor-block-mover {
 			left: -$block-padding - $block-left-border-width;
 		}
+
+		// Move the controls up so they don't interfere with the breadcrumb on hover.
+		&.is-hovered > .block-editor-block-list__block-edit > .block-editor-block-mover {
+			top: -$block-side-ui-width - $block-padding - $border-width - ($block-side-ui-clearance * 2);
+		}
 	}
 
 	// Full-wide
